<?xml version="1.0"?>
<package>
  <name>drchubo_v2</name>
  <version>0.0.1</version>
  <description>The drchubo_v2 package</description>
  <maintainer email="rwe24g@gmail.com">Robert W. Ellenberg</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
